# Qt-StudentInformationManagementSystem

./: CMakeLists.txt  EditStudentMessageBox.cpp  EditStudentMessageBox.h  MainWidget.cpp  MainWidget.h  config.h  main.cpp  student.cpp  student.h
